Layout break fixes

--- a/style.css
+++ b/style.css
@@ -6,10 +6,13 @@
     font-family: Roboto;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+
 /* webinar section */
 #webinar {
-    background: linear-gradient(180deg, #263F4B 16.28%, rgba(38, 63, 75, 0.8) 100%),
-                url('/intro-bg.jpg') no-repeat top center;
+    background: linear-gradient(180deg, rgba(46, 75, 87, 0.4) 0%, #263F4B 73.31%),
+                url('/img/bg-top.jpg') no-repeat top center;
     background-size: cover;
     width: 100vw;
     height: 100%;
@@ -39,7 +42,8 @@
 
 @media screen and (max-width: 600px) {
     #webinar {
-        background: linear-gradient(180deg, #263F4B 16.28%, rgba(38, 63, 75, 0.8) 100%);
+        background: linear-gradient(180deg, rgba(46, 75, 87, 0.4) 0%, #263F4B 73.31%),
+                    url('/img/bg-top.jpg') no-repeat top center;
         width: 100vw;
         height: 100%;
         padding-top: 70px;
@@ -73,8 +77,14 @@
     width: 60%;
 }
     
-/* Formulário */
+/* Formulários */
 #form {
+    width: 464px;
+    text-align: center;
+    margin: 0 auto 50px;
+}
+
+#form-rodape {
     width: 464px;
     text-align: center;
     margin: 0 0 80px 0;
@@ -207,10 +217,7 @@ input.rounded::placeholder {
     }
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
-
-h1 {
+#convidados h1  {
     font-family: 'Roboto Condensed', sans-serif;
     font-style: normal;
     font-weight: bold;
@@ -222,7 +229,7 @@ h1 {
     padding: 50px;
 }
 
-h2 {
+h2.nome-conv {
     font-family: 'Roboto Condensed', sans-serif;
     font-style: normal;
     font-weight: bold;
@@ -234,7 +241,7 @@ h2 {
     color: #FFFFFF;
 }
 
-p {
+p.info-conv {
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 300;
@@ -252,10 +259,8 @@ form {
 }
 
 .conv-container {
-    background-image: linear-gradient(
-        180deg, #263F4B 16.28%, rgba(38, 63, 75, 0.8) 100%
-        ),
-        url('./img/bg-bottom.jpg');
+    background-image: linear-gradient(180deg, #263F4B 16.28%, rgba(38, 63, 75, 0.8) 100%),
+                        url('./img/bg-bottom.jpg');
     background-repeat: no-repeat;
     width: 100vw;
     min-height: 100vh;
@@ -263,6 +268,8 @@ form {
     text-align: center;
     padding: 50px;
 }
+
+
 
 .convidado-img {
     border: 1px solid none;
